updates the front end part